--- a/src/Makefile
+++ b/src/Makefile
@@ -5,9 +5,11 @@ LIBFLAGS = #lib/cppunitlite.a
 %.o : %.cpp
 	$(CC) $(CCFLAGS) -c $<
 
-objects = maintest.o unittest.o Sequence.o
+objects = maintest.o unittest.o Sequence.o Nussinov.o
 
 all: maintest
+
+.PHONEY= clean valgrind
 
 cppunitlite:
 	cd lib; make all
@@ -16,11 +18,13 @@ maintest: $(objects)
 	@echo "Compiling main unit test program..."
 	${CC} -o maintest $(objects) ${LIBFLAGS} 
 	@echo "Running unit tests..."
-	./maintest
+	#./maintest
 
-main.o: main.cpp
-simplest_test.o: simplest_test.cpp
-fixture_test.o: fixture_test.cpp
+valgrind:
+	valgrind ./maintest
+
+rnx: rnx.cpp
+	${CC} $(CCFLAGAS) -o rnx $<
 
 
 clean:
